# Copycat

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml
copycat_plugin/: Cargo.toml  build.rs
copycat_plugin/src/: lib.rs
installer/: Cargo.toml
installer/src/: main.rs
