[workspace]
members = [
    "copycat_plugin",
    "xtask",
    "installer",
]
resolver = "2"

[profile.release]
debug = true
strip = true
opt-level = "z"
lto = "fat"
codegen-units = 1

[patch."https://github.com/robbert-vdh/nih-plug.git"]
nih_plug = { path = "nih-plug-patched" }
nih_plug_egui = { path = "nih-plug-patched/nih_plug_egui" }
nih_plug_xtask = { path = "nih-plug-patched/nih_plug_xtask" }




