[package]
name = "copycat"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }
ndarray = "0.16"
midly = "0.5"
symphonia = { version = "0.5", features = ["all"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.12"
parking_lot = "0.12"
libloading = "0.8"

ort = { version = "=2.0.0-rc.9", features = ["ndarray"] }
ort-sys = "=2.0.0-rc.9"
process_path = "0.1.4"
